--- a/processing/build.gradle
+++ b/processing/build.gradle
@@ -8,5 +8,12 @@ repositories {
 }
 
 dependencies {
+    compile files('/Applications/Processing.app/Contents/Java/core/library/core.jar',
+    '/Applications/Processing.app/Contents/Java/core/library/gluegen-rt-natives-macosx-universal.jar',
+    '/Applications/Processing.app/Contents/Java/core/library/gluegen-rt.jar',
+    '/Applications/Processing.app/Cont…ents/Java/core/library/jogl-all-natives-macosx-universal.jar',
+    '/Applications/Processing.app/Contents/Java/core/library/jogl-all.jar')
+    compile "com.google.guava:guava:16.0.1"
     testCompile group: 'junit', name: 'junit', version: '4.11'
+
 }
